🚨 WEE WOO WEE WOO 🚨 rework EVERYTHING to use URI instead of URL at 5:30 IN THE MORNING
It imports Rewind Upsilon and Tinkerer's Quilt 1.20 just fine. I hope this fixes #10!!!!!